--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "myapp-expressgen",
   "version": "0.0.0",
+  "engines": {
+    "node": "15.5.1"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
