--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "helmet": "^4.3.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "socket.io": "^3.0.5"
   }
 }
